Fixes #220 Improve legibility for small viewports (phones) Limits content to not be wider than the viewport, useful for reading in a side-bar or on a small screen like a phone.

--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,7 @@ h3 {
 }
 
 #content {
-    width: 800px;
+    max-width: 800px;
     margin-left: auto;
     margin-right: auto;
 }
